--- a/autisten-info-bootstrap/blog.html
+++ b/autisten-info-bootstrap/blog.html
@@ -7,7 +7,9 @@
     <title>Autisten.Info</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
+    <link rel="stylesheet" href="assets/css/content/videoheader.compiled.css">
     <link rel="stylesheet" href="assets/css/Navbar-Centered-Brand-Dark-icons.css">
+    <link rel="stylesheet" href="assets/css/styles.compiled.css">
 </head>
 
 <body>
@@ -18,6 +20,7 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link active" nuxt:name="NuxtLink" to="/">Startseite</a></li>
                     <li class="nav-item"><a class="nav-link active" nuxt:name="NuxtLink" to="/about">Über Uns</a></li>
+                    <li class="nav-item"><a class="nav-link active" nuxt:name="NuxtLink" to="/blog">Blog</a></li>
                 </ul>
                 <div class="d-md-none my-2"><button class="btn btn-light me-2" type="button">Button</button><button class="btn btn-primary" type="button">Button</button></div>
             </div>
